# pygidFIT

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
example/notebooks/: Example.ipynb
notebooks/: Example.ipynb  test.ipynb
pygidfit/: __init__.py  box_utils.py  clustering_and_errors.py  fitting_models.py  imgcontainer.py  io_utils.py  main.py  process_scans.py
tests/: test_fitting.py
