[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygidfit"
version = "0.1.1"
description = "Gaussian fitting for grazing incidence diffraction data"
readme = "README.md"
authors = [
    {name = "Ekaterina Kneschaurek", email = "ekaterina.kneschaurek@uni-tuebingen.de"},
    {name = "Vladimir Starostin", email = "vladimir.starostin@uni-tuebingen.de"},
    {name = "Ainur Abuakev", email = "ainur.abukaev@uni-tuebingen.de"},
]
license = { file = "LICENSE" }

requires-python = ">=3.7"
dependencies = [
    "h5py",
    "numpy",
    "matplotlib",
    "rtree",
    "pandas",
    "lmfit",
    "opencv-python",
    "numba",
    "shapely",
    "networkx",
    "pygid"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools]
#package-dir = {"" = "src"}

[tool.setuptools.packages.find]
#where = ["src"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 